<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingTop="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:contentDescription="@string/main_screen"
        android:src="@drawable/musicimage2" />

    <TextView
        android:id="@+id/nowPlaying"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="25dp"
        android:text="@string/now_playing"
        android:textSize="24sp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/playlist"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/genre"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/album"
        android:textSize="24sp"
        android:textStyle="italic" />


</LinearLayout>
