<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/nowPlaying">

    <TextView
        android:id="@+id/songtitleview"
        android:text="Black is Beautiful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/albumNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronology"
        android:textColor="#ff7aff24"
        android:textSize="35sp"
        android:textStyle="italic"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="293dp"
        android:layout_height="218dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/album_art"
        android:src="@drawable/chronology_imageart" />

    <TextView
        android:id="@+id/seekBarTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="30dp"
        android:layout_gravity="center"
        android:text="@string/_60_sec"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingBottom="10dp">


        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>